# mouse-ffi

./: README.md
mouse/: README.md  pubspec.yaml
mouse/lib/: mouse.dart
mouse_linux/: README.md  ffigen.yaml  pubspec.yaml
mouse_linux/lib/: mouse_linux.dart  mouse_linux_bindings_generated.dart
mouse_linux/linux/: CMakeLists.txt
mouse_linux/src/: CMakeLists.txt  mouse_linux.c  mouse_linux.h
mouse_macos/: README.md  ffigen.yaml  pubspec.yaml
mouse_macos/lib/: mouse_macos.dart  mouse_macos_bindings_generated.dart
mouse_macos/macos/: mouse_macos.podspec
mouse_macos/macos/Classes/: mouse_macos.c
mouse_macos/src/: CMakeLists.txt  mouse_macos.c  mouse_macos.h
mouse_platform_interface/: README.md  pubspec.yaml
mouse_platform_interface/lib/: mouse_platform_interface.dart
mouse_platform_interface/lib/src/: interface.dart  mouse_platform.dart
mouse_windows/: Makefile  README.md  ffigen.yaml  pubspec.yaml
mouse_windows/lib/: mouse_windows.dart  mouse_windows_bindings_generated.dart
mouse_windows/src/: CMakeLists.txt  mouse_windows.c  mouse_windows.h
mouse_windows/windows/: CMakeLists.txt
